limit mvn Xms