@@ -26,6 +26,7 @@ INPUT_HDFS="/user/wos_michal/input"
 OUTPUT_HDFS="/user/wos_michal/output"
 
 pushd $PROJECT_HOME/giraph-cc
+    export MAVEN_OPTS='-Xms384M -Xmx512M -XX:MaxPermSize=256M'
     mvn -Phadoop_2 -Dhadoop.version=2.8.2 -DskipTests clean package || { echo "Error while building"; exit 1; }
 popd
 
